--- a/styles/style.css
+++ b/styles/style.css
@@ -9,6 +9,11 @@ header {
     padding: 50px 240px;
 }
 
+.text-light-gray {
+    color: var(--Dark-03, #727272);
+
+}
+
 nav {
     display: flex;
     justify-content: space-between;
@@ -31,7 +36,7 @@ nav a {
     color: black;
 }
 
-.nav-title {
+.section-title {
     color: var(--Dark-01, #131313);
 
     font-size: 2.8rem;
@@ -55,9 +60,6 @@ nav a {
 
 }
 
-.bannar-des {
-    color: var(--Dark-03, #727272);
-}
 
 .btn-primary {
     border-radius: 8px;
@@ -90,7 +92,7 @@ main {
 .team-img-contailer {
     display: grid;
     grid-template-columns: repeat(2, 1fr);
-    grid-template-rows: repeat(2, 1fr);
+    /* grid-template-rows: repeat(2, 1fr); */
     gap: 1.5rem
 }
 
@@ -102,12 +104,13 @@ main {
 .team-title {
     font-size: 2.8rem;
 }
+
 .quick {
-    color: var(--Dark-03, #727272);
-    
+
     font-weight: 500;
-    
+
 }
+
 .our {
     color: var(--Dark-01, #131313);
     font-weight: 700;
@@ -118,23 +121,84 @@ main {
     font-weight: 700;
 }
 
+.card-stats {
+    color: var(--Dark-02, #424242);
+    font-size: 2.8rem;
+    font-weight: 600;
+    margin-top: 10px;
+    margin-bottom: 10px;
+}
+
+.card-container .card-title {
+    font-size: 1.25rem;
+    margin-top: 5px;
+}
+
+.card-container {
+    display: flex;
+    justify-content: space-around;
+}
+
+.card-container .card {
+    border-radius: 8px;
+    border: 1px solid #FF900E;
+    text-align: center;
+    padding: 50px 30px;
+}
+
+.sponsors {
+    text-align: center;
+}
+
+.sposors-img {
+    display: flex;
+    justify-content: space-evenly;
+    margin-top: 50px;
+}
+
+
+
 
 @media screen and (max-width:576px) {
     header {
         padding: 20px;
     }
 
-    nav {
+    nav,
+    .team-container, .card-container {
         flex-direction: column;
+    }
+
+    .team-img-contailer {
+        grid-template-columns: 1fr;
+    }
+
+    .team-content, .card-container {
+        padding-right: 20px;
+        padding-left: 20px;
+    }
+    .card-container {
+        gap: 20px;
     }
 }
 
 @media screen and (min-width:576px) and (max-width:960px) {
     header {
         padding: 50px;
+
     }
 
-    nav {
+    nav,
+    .team-container {
         flex-direction: column;
+    }
+
+    .team-img-contailer {
+        grid-template-columns: 1fr;
+    }
+
+    .team-content {
+        padding-right: 25px;
+        padding-left: 25px;
     }
 }
