--- a/styles/style.css
+++ b/styles/style.css
@@ -82,6 +82,7 @@ nav a {
 main {
     max-width: 1440px;
     margin: 0 auto;
+
 }
 
 .team-container {
@@ -154,10 +155,63 @@ main {
     display: flex;
     justify-content: space-evenly;
     margin-top: 50px;
+    gap: 40px;
+    align-items: center;
 }
 
+.sposors-img img {
+    width: 165px;
 
+}
 
+.features {
+    display: flex;
+    margin-top: 140px;
+    gap: 100px;
+}
+
+.feature-content .card {
+    padding: 30px;
+    margin-bottom: 20px;
+    border-radius: 8px;
+    background: #FFF;
+    box-shadow: 0px 4px 30px 0px rgba(0, 0, 0, 0.06);
+}
+
+.title-style {
+    border-left: 5px solid orange;
+    padding-left: 15px;
+
+}
+
+.ten-years-badge {
+    border-radius: 8px;
+    background: #FF900E;
+    color: white;
+    width: 342px;
+    text-align: center;
+
+    position: relative;
+    bottom: 100px;
+
+}
+
+.ten-years-badge h4 {
+    font-size: 3.5rem;
+    padding: 40px;
+    margin: 0;
+}
+
+.ten-years-badge p {
+    font-size: 1.25rem;
+    margin: 0;
+    padding-bottom: 20px;
+}
+
+.feature-img img {
+    height: 90%;
+    margin-left: 90px;
+}
 
 @media screen and (max-width:576px) {
     header {
@@ -165,21 +219,41 @@ main {
     }
 
     nav,
-    .team-container, .card-container {
+    .team-container,
+    .card-container,
+    .sposors-img,
+    .features {
         flex-direction: column;
     }
+
 
     .team-img-contailer {
         grid-template-columns: 1fr;
     }
 
-    .team-content, .card-container {
+    .team-content,
+    .card-container {
         padding-right: 20px;
         padding-left: 20px;
     }
+
     .card-container {
         gap: 20px;
     }
+
+    .feature-img img {
+        
+        margin-left: 0px;
+        width: 100%;
+    }
+
+    .ten-years-badge {
+        
+        position: static;
+        max-width: 400px;
+
+    }
+
 }
 
 @media screen and (min-width:576px) and (max-width:960px) {
@@ -189,7 +263,9 @@ main {
     }
 
     nav,
-    .team-container {
+    .team-container,
+    .sposors-img,
+    .features {
         flex-direction: column;
     }
 
